apps/uptime-kuma/overlays/prod/ingress.yaml
# Ingress资源与域名和TLS证书强相关，是典型的环境特定资源
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
    - host: "uptime.liuovo.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
  tls:
    - hosts:
        - "uptime.liuovo.com"
      secretName: uptime-kuma-tls
